Layout Bug: Projects grid was not flush to the edge of .inner container. Added negative margin to container sides based on margin from grid item sides.

--- a/wp-content/themes/custom-theme/core/css/global.css
+++ b/wp-content/themes/custom-theme/core/css/global.css
@@ -2021,7 +2021,12 @@ select::-ms-expand {
   padding-top: 2.5em;
 }
 
-/* line 9, ../sass/templates/_tmpl-projects.scss */
+/* line 6, ../sass/templates/_tmpl-projects.scss */
+.project-grid {
+  margin: 0 -0.75em;
+}
+
+/* line 13, ../sass/templates/_tmpl-projects.scss */
 .grid {
   *zoom: 1;
   margin: 0 -0.75em 0 0;
@@ -2038,23 +2043,23 @@ select::-ms-expand {
   clear: both;
 }
 
-/* line 19, ../sass/templates/_tmpl-projects.scss */
+/* line 23, ../sass/templates/_tmpl-projects.scss */
 .griditem {
   margin: 0;
   padding: 0;
   position: relative;
 }
-/* line 24, ../sass/templates/_tmpl-projects.scss */
+/* line 28, ../sass/templates/_tmpl-projects.scss */
 .griditem:before {
   display: none;
 }
 
-/* line 29, ../sass/templates/_tmpl-projects.scss */
+/* line 33, ../sass/templates/_tmpl-projects.scss */
 .griditem__box {
   margin: 0 0.75em 1.5em;
 }
 
-/* line 33, ../sass/templates/_tmpl-projects.scss */
+/* line 37, ../sass/templates/_tmpl-projects.scss */
 .griditem__img {
   -moz-transition: -moz-transform 500ms ease-in 0s, opacity 500ms ease-in 0s;
   -o-transition: -o-transform 500ms ease-in 0s, opacity 500ms ease-in 0s;
@@ -2074,7 +2079,7 @@ select::-ms-expand {
   transform: perspective(1.05) scale(1.05, 1.05);
 }
 
-/* line 45, ../sass/templates/_tmpl-projects.scss */
+/* line 49, ../sass/templates/_tmpl-projects.scss */
 .griditem__link {
   -moz-backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
@@ -2087,7 +2092,7 @@ select::-ms-expand {
   transition: background 500ms ease 0s, box-shadow 500ms ease 0s;
   width: 100%;
 }
-/* line 55, ../sass/templates/_tmpl-projects.scss */
+/* line 59, ../sass/templates/_tmpl-projects.scss */
 .griditem__link:before {
   background-color: #000;
   content: '';
@@ -2098,11 +2103,11 @@ select::-ms-expand {
   bottom: 0;
   left: 0;
 }
-/* line 67, ../sass/templates/_tmpl-projects.scss */
+/* line 71, ../sass/templates/_tmpl-projects.scss */
 .griditem__link:hover {
   box-shadow: 0 0 3px 2px rgba(229, 142, 26, 0.5);
 }
-/* line 70, ../sass/templates/_tmpl-projects.scss */
+/* line 74, ../sass/templates/_tmpl-projects.scss */
 .griditem__link:hover .griditem__img {
   -moz-transition: -moz-transform 5.25s cubic-bezier(0.26, 0.1, 0.25, 1) 0s, opacity 2s linear 0s;
   -o-transition: -o-transform 5.25s cubic-bezier(0.26, 0.1, 0.25, 1) 0s, opacity 2s linear 0s;
@@ -2116,7 +2121,7 @@ select::-ms-expand {
   opacity: 1;
 }
 
-/* line 79, ../sass/templates/_tmpl-projects.scss */
+/* line 83, ../sass/templates/_tmpl-projects.scss */
 .griditem__title {
   font-size: 16px;
   font-weight: 300;
@@ -2126,19 +2131,19 @@ select::-ms-expand {
 }
 
 @media screen and (min-width: 500px) {
-  /* line 89, ../sass/templates/_tmpl-projects.scss */
+  /* line 93, ../sass/templates/_tmpl-projects.scss */
   .griditem {
     float: left;
   }
 }
 @media screen and (min-width: 500px) and (max-width: 800px) {
-  /* line 95, ../sass/templates/_tmpl-projects.scss */
+  /* line 99, ../sass/templates/_tmpl-projects.scss */
   .griditem {
     width: 50%;
   }
 }
 @media screen and (min-width: 801px) {
-  /* line 102, ../sass/templates/_tmpl-projects.scss */
+  /* line 106, ../sass/templates/_tmpl-projects.scss */
   .griditem {
     background: #fff;
     float: left;
@@ -2147,7 +2152,7 @@ select::-ms-expand {
     position: relative;
     width: 33.33%;
   }
-  /* line 110, ../sass/templates/_tmpl-projects.scss */
+  /* line 114, ../sass/templates/_tmpl-projects.scss */
   .griditem:nth-child(4), .griditem:nth-child(5), .griditem:nth-child(9), .griditem:nth-child(10), .griditem:nth-child(14), .griditem:nth-child(15), .griditem:nth-child(19), .griditem:nth-child(20) {
     width: 50%;
   }
